fix by wrong z-index in project info of each slider on homepage

--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -216,56 +216,66 @@ a, a:hover {
       transform: translateY(25%); }
     .prj_wrapper .prj .prj_desc {
       transform: translateY(25%); }
-    .prj_wrapper .prj.prj-cresus .prj_desc p {
-      color: #aa804e; }
-      .prj_wrapper .prj.prj-cresus .prj_desc p:after {
-        background: #aa804e; }
-    .prj_wrapper .prj.prj-cresus .prj_detail .btn-more {
-      border-color: rgba(105, 96, 117, 0.3); }
-      .prj_wrapper .prj.prj-cresus .prj_detail .btn-more:hover {
-        border-color: white;
-        background: #fff;
-        color: #221f26; }
-    .prj_wrapper .prj.prj-durance .prj_desc p {
-      color: #f6c709; }
-      .prj_wrapper .prj.prj-durance .prj_desc p:after {
-        background: #f6c709; }
-    .prj_wrapper .prj.prj-durance .prj_detail .btn-more {
-      border-color: rgba(255, 176, 202, 0.3); }
-      .prj_wrapper .prj.prj-durance .prj_detail .btn-more:hover {
-        border-color: white;
-        background: #fff;
-        color: #ee5285; }
-    .prj_wrapper .prj.prj-bys .prj_desc p {
-      color: #282a3f; }
-      .prj_wrapper .prj.prj-bys .prj_desc p:after {
-        background: #282a3f; }
-    .prj_wrapper .prj.prj-bys .prj_detail .btn-more {
-      border-color: rgba(224, 151, 255, 0.3); }
-      .prj_wrapper .prj.prj-bys .prj_detail .btn-more:hover {
-        border-color: white;
-        background: #fff;
-        color: #ad3cdc; }
-    .prj_wrapper .prj.prj-club75 .prj_desc p {
-      color: #d1ff00; }
-      .prj_wrapper .prj.prj-club75 .prj_desc p:after {
-        background: #d1ff00; }
-    .prj_wrapper .prj.prj-club75 .prj_detail .btn-more {
-      border-color: rgba(49, 203, 209, 0.3); }
-      .prj_wrapper .prj.prj-club75 .prj_detail .btn-more:hover {
-        border-color: white;
-        background: #fff;
-        color: #168185; }
-    .prj_wrapper .prj.prj-renault .prj_desc p {
-      color: #f64847; }
-      .prj_wrapper .prj.prj-renault .prj_desc p:after {
-        background: #f64847; }
-    .prj_wrapper .prj.prj-renault .prj_detail .btn-more {
-      border-color: rgba(253, 117, 115, 0.3); }
-      .prj_wrapper .prj.prj-renault .prj_detail .btn-more:hover {
-        border-color: white;
-        background: #fff;
-        color: #ae0b09; }
+    .prj_wrapper .prj.prj-cresus {
+      visibility: visible; }
+      .prj_wrapper .prj.prj-cresus .prj_desc p {
+        color: #aa804e; }
+        .prj_wrapper .prj.prj-cresus .prj_desc p:after {
+          background: #aa804e; }
+      .prj_wrapper .prj.prj-cresus .prj_detail .btn-more {
+        border-color: rgba(105, 96, 117, 0.3); }
+        .prj_wrapper .prj.prj-cresus .prj_detail .btn-more:hover {
+          border-color: white;
+          background: #fff;
+          color: #221f26; }
+    .prj_wrapper .prj.prj-durance {
+      visibility: hidden; }
+      .prj_wrapper .prj.prj-durance .prj_desc p {
+        color: #f6c709; }
+        .prj_wrapper .prj.prj-durance .prj_desc p:after {
+          background: #f6c709; }
+      .prj_wrapper .prj.prj-durance .prj_detail .btn-more {
+        border-color: rgba(255, 176, 202, 0.3); }
+        .prj_wrapper .prj.prj-durance .prj_detail .btn-more:hover {
+          border-color: white;
+          background: #fff;
+          color: #ee5285; }
+    .prj_wrapper .prj.prj-bys {
+      visibility: hidden; }
+      .prj_wrapper .prj.prj-bys .prj_desc p {
+        color: #282a3f; }
+        .prj_wrapper .prj.prj-bys .prj_desc p:after {
+          background: #282a3f; }
+      .prj_wrapper .prj.prj-bys .prj_detail .btn-more {
+        border-color: rgba(224, 151, 255, 0.3); }
+        .prj_wrapper .prj.prj-bys .prj_detail .btn-more:hover {
+          border-color: white;
+          background: #fff;
+          color: #ad3cdc; }
+    .prj_wrapper .prj.prj-club75 {
+      visibility: hidden; }
+      .prj_wrapper .prj.prj-club75 .prj_desc p {
+        color: #d1ff00; }
+        .prj_wrapper .prj.prj-club75 .prj_desc p:after {
+          background: #d1ff00; }
+      .prj_wrapper .prj.prj-club75 .prj_detail .btn-more {
+        border-color: rgba(49, 203, 209, 0.3); }
+        .prj_wrapper .prj.prj-club75 .prj_detail .btn-more:hover {
+          border-color: white;
+          background: #fff;
+          color: #168185; }
+    .prj_wrapper .prj.prj-renault {
+      visibility: hidden; }
+      .prj_wrapper .prj.prj-renault .prj_desc p {
+        color: #f64847; }
+        .prj_wrapper .prj.prj-renault .prj_desc p:after {
+          background: #f64847; }
+      .prj_wrapper .prj.prj-renault .prj_detail .btn-more {
+        border-color: rgba(253, 117, 115, 0.3); }
+        .prj_wrapper .prj.prj-renault .prj_detail .btn-more:hover {
+          border-color: white;
+          background: #fff;
+          color: #ae0b09; }
     .prj_wrapper .prj .prj_desc {
       overflow: hidden;
       padding-left: 30px;
