--- a/components/sass/block/_home-prj-info.scss
+++ b/components/sass/block/_home-prj-info.scss
@@ -14,6 +14,7 @@
         transform: translateY(25%);
     }
     &.prj-cresus {
+      visibility: visible;
       .prj_desc {
         p {
           color: #aa804e;
@@ -34,6 +35,7 @@
       }
     }
     &.prj-durance {
+      visibility: hidden;
       .prj_desc {
         p {
           color: #f6c709;
@@ -54,6 +56,7 @@
       }
     }
     &.prj-bys {
+      visibility: hidden;
       .prj_desc {
         p {
           color: #282a3f;
@@ -74,6 +77,7 @@
       }
     }
     &.prj-club75 {
+      visibility: hidden;
       .prj_desc {
         p {
           color: #d1ff00;
@@ -94,6 +98,7 @@
       }
     }
     &.prj-renault {
+      visibility: hidden;
       .prj_desc {
         p {
           color: #f64847;
